--- a/apps/plex-debrid/restricted.tmux.conf
+++ b/apps/plex-debrid/restricted.tmux.conf
@@ -11,7 +11,9 @@ set -g mouse off
 # Disable status bar
 set -g status off
 
+# Set default term type
 set -g default-terminal "tmux"
 
 # Disable special characters on scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
