--- a/apps/stremio-server/ci/goss.yaml
+++ b/apps/stremio-server/ci/goss.yaml
@@ -5,10 +5,10 @@
 #     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-port:
-  # https://github.com/aelsabbahy/goss/issues/149
-  tcp:11470:
-    listening: true
+# port:
+#   # https://github.com/aelsabbahy/goss/issues/149
+#   tcp:11470:
+#     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
