--- a/apps/stremio-web/ci/goss.yaml
+++ b/apps/stremio-web/ci/goss.yaml
@@ -4,11 +4,11 @@
 #   gunicorn:
 #     running: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-port:
-  # https://github.com/aelsabbahy/goss/issues/149
-  tcp:8080:
-    listening: true
+# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
+# port:
+#   # https://github.com/aelsabbahy/goss/issues/149
+#   tcp:8080:
+#     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
