--- a/apps/knightcrawler/metadata/Dockerfile
+++ b/apps/knightcrawler/metadata/Dockerfile
@@ -4,7 +4,7 @@ ARG CHANNEL
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone https://github.com/geek-cookbook/torrentio.elfhosted.com.git /source
+RUN git clone -b $VERSION --depth 1 https://github.com/knightcrawler-stremio/knightcrawler.git /source
 
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
