--- a/apps/knightcrawler/producer/Dockerfile
+++ b/apps/knightcrawler/producer/Dockerfile
@@ -1,5 +1,6 @@
+# Get upstream code
 FROM alpine:latest as cloner
-ARG CHANNEL
+ARG VERSION
 
 RUN apk update && apk upgrade && \
     apk add --no-cache git
