--- a/apps/stremio/ci/goss.yaml
+++ b/apps/stremio/ci/goss.yaml
@@ -11,8 +11,8 @@ port:
   # https://github.com/aelsabbahy/goss/issues/149
   tcp:8080:
     listening: true
-  tcp:11470:
-    listening: true    
+  # tcp:11470:
+  #   listening: true    
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
