Fix stremio entrypoint
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/stremio/Dockerfile
+++ b/apps/stremio/Dockerfile
@@ -152,5 +152,6 @@ ENTRYPOINT []
 
 # For our VPN.sh script
 COPY ./apps/alpine/scripts/vpn.sh /scripts/vpn.sh
+COPY ./apps/stremio/entrypoint.sh /entrypoint.sh
 
 CMD ["/entrypoint.sh"]
