Add bash to stremio image
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/stremio/Dockerfile
+++ b/apps/stremio/Dockerfile
@@ -140,7 +140,7 @@ COPY --from=ffmpeg /usr/bin/ffmpeg /usr/bin/ffprobe /usr/bin/
 COPY --from=ffmpeg /usr/lib/jellyfin-ffmpeg /usr/lib/
 
 # Add libs
-RUN apk add --no-cache libwebp libvorbis x265-libs x264-libs libass opus libgmpxx lame-libs gnutls libvpx libtheora libdrm libbluray zimg libdav1d aom-libs xvidcore fdk-aac libva curl intel-media-sdk && \
+RUN apk add --no-cache bash libwebp libvorbis x265-libs x264-libs libass opus libgmpxx lame-libs gnutls libvpx libtheora libdrm libbluray zimg libdav1d aom-libs xvidcore fdk-aac libva curl intel-media-sdk && \
   rm -rf /var/cache/apk/* && rm -rf /tmp/*
 
 VOLUME ["/root/.stremio-server"]
