--- a/apps/stremio-jackett/Dockerfile
+++ b/apps/stremio-jackett/Dockerfile
@@ -19,7 +19,7 @@ RUN pip install -r requirements.txt
 COPY --from=cloner /source/source/. .
 
 # Add ElfHosted branding
-COPY apps/stremio-jackett/branding/index.html .
+COPY apps/stremio-jackett/branding/index.html ./templates/
 COPY apps/stremio-jackett/branding/manifest.patch .
 RUN patch main.py < manifest.patch
 
