--- a/apps/tooling/Dockerfile
+++ b/apps/tooling/Dockerfile
@@ -72,6 +72,9 @@ RUN \
   mv splash /usr/local/bin && \
   rm README.md
 
+# cloudflare cli
+RUN npm install -g cloudflare-cli
+
 RUN curl -fSsL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | tee /usr/share/keyrings/postgresql.gpg > /dev/null && \
 	echo deb [arch=amd64,arm64,ppc64el signed-by=/usr/share/keyrings/postgresql.gpg] http://apt.postgresql.org/pub/repos/apt/ focal-pgdg main | tee -a /etc/apt/sources.list.d/postgresql.list && \
 	apt-get update && \
