--- a/apps/stremio-server/Dockerfile
+++ b/apps/stremio-server/Dockerfile
@@ -3,4 +3,5 @@ FROM docker.io/stremio/server:${VERSION} as upstream
 
 COPY ./apps/alpine/scripts/vpn.sh /scripts/vpn.sh
 COPY ./apps/stremio-server/entrypoint.sh /entrypoint.sh
-CMD ["/entrypoint.sh"]
+CMD []
+ENTRYPOINT ["/entrypoint.sh"]
