--- a/apps/stremify/ci/goss.yaml
+++ b/apps/stremify/ci/goss.yaml
@@ -5,10 +5,10 @@ process:
     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-port:
-  # https://github.com/aelsabbahy/goss/issues/149
-  tcp:3000:
-    listening: true
+# port:
+#   # https://github.com/aelsabbahy/goss/issues/149
+#   tcp:3000:
+#     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
