--- a/apps/rdtclient/Dockerfile
+++ b/apps/rdtclient/Dockerfile
@@ -87,12 +87,6 @@ RUN \
 
 ENV PATH "$PATH:/usr/share/dotnet"
 
-# /app should belong to elfie
-USER 568
-
-# Just create the directory as belonging to elfie, so that goss tests will work
-WORKDIR /data
-
 # Copy files for app
 WORKDIR /app
 COPY --from=dotnet-build-env /appserver/server/out .
@@ -103,4 +97,6 @@ COPY --from=node-build-env /appclient/root/ /
 EXPOSE 6500
 
 COPY ./apps/rdtclient/entrypoint.sh /entrypoint.sh
+COPY ./apps/rdtclient/appsettings.json /app/
+
 CMD ["/entrypoint.sh"]
