Apply latest knightcrawler fix
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/knightcrawler/addon/Dockerfile
+++ b/apps/knightcrawler/addon/Dockerfile
@@ -22,9 +22,10 @@ COPY --from=cloner /source/src/addon/. .
 
 # ElfHosted branding
 COPY apps/knightcrawler/branding/manifest.js ./src/lib/manifest.js
+COPY apps/knightcrawler/branding/landingTemplate.js ./src/lib/landingTemplate.js
 
-# Copy fix until https://github.com/knightcrawler-stremio/knightcrawler/pull/207 is resolved
-COPY apps/knightcrawler/addon/repository.js ./src/lib/repository.js
+# Copy fix until https://github.com/knightcrawler-stremio/knightcrawler/pull/210 is resolved
+COPY apps/knightcrawler/addon/streamInfo.js ./src/lib/streamInfo.js
 
 RUN npm run build
 
