Run cyberflix on 0.0.0.0 not 127.0.0.1
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/cyberflix-server/Dockerfile
+++ b/apps/cyberflix-server/Dockerfile
@@ -19,4 +19,4 @@ COPY --from=cloner /source .
 
 EXPOSE 8000
 
-CMD ["gunicorn", "run:app", "--threads 4", "--worker-class", "uvicorn.workers.UvicornWorker"]
+CMD ["gunicorn", "run:app", "--threads 4", "--worker-class", "uvicorn.workers.UvicornWorker","--bind", "0.0.0.0:8000" ]
