--- a/apps/calibre-web/Dockerfile
+++ b/apps/calibre-web/Dockerfile
@@ -8,16 +8,26 @@ ARG KEPUBIFY_RELEASE=v4.0.4 # until we can work out how to do github auth on thi
 RUN \
   echo "**** install build packages ****" && \
   apt-get update && \
-  apt-get install -y --no-install-recommends \
+  apt-get install -y \
+    git \
+    libldap2-dev \
+    libsasl2-dev \
     build-essential \
-    python3-dev && \
+    python3-dev \
+    python3-pip && \
   echo "**** install runtime packages ****" && \
-  apt-get install -y --no-install-recommends \
+  apt-get install -y \
     imagemagick \
-    ghostscript \
+    libnss3 \
+    libxcomposite1 \
     libxi6 \
     libxslt1.1 \
-    python3-venv && \
+    libldap-2.4-2 \
+    libsasl2-2 \
+    libxrandr2 \
+    python3-minimal \
+    python3-pkg-resources \
+    unrar && \
   echo "**** install calibre-web ****" && \
   curl -o \
     /tmp/calibre-web.tar.gz -L \
@@ -28,27 +38,27 @@ RUN \
     /tmp/calibre-web.tar.gz -C \
     /app/calibre-web --strip-components=1 && \
   cd /app/calibre-web && \
-  python3 -m venv /lsiopy && \
-  pip install -U --no-cache-dir \
-    pip \
-    wheel && \
-  pip install -U --no-cache-dir --find-links https://wheel-index.linuxserver.io/ubuntu/ -r \
+  pip3 install --no-cache-dir -U \
+    pip && \
+  pip install --no-cache-dir -U --ignore-installed --find-links https://wheel-index.linuxserver.io/ubuntu/ -r \
     requirements.txt -r \
     optional-requirements.txt && \
   echo "***install kepubify" && \
   if [ -z ${KEPUBIFY_RELEASE+x} ]; then \
     KEPUBIFY_RELEASE=$(curl -sX GET "https://api.github.com/repos/pgaskin/kepubify/releases/latest" \
-    | awk '/tag_name/{print $4;exit}' FS='[""]'); \
+      | awk '/tag_name/{print $4;exit}' FS='[""]'); \
   fi && \
   curl -o \
     /usr/bin/kepubify -L \
     https://github.com/pgaskin/kepubify/releases/download/${KEPUBIFY_RELEASE}/kepubify-linux-64bit && \
   echo "**** cleanup ****" && \
   apt-get -y purge \
-    build-essential \
+    git \
     libldap2-dev \
     libsasl2-dev \
-    python3-dev && \
+    build-essential \
+    python3-dev \
+    python3-pip && \
   apt-get -y autoremove && \
   rm -rf \
     /tmp/* \
