--- a/apps/airdcpp/ci/goss.yaml
+++ b/apps/airdcpp/ci/goss.yaml
@@ -1,24 +1,11 @@
 ---
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#file
-file:
-  /scripts/greeting.sh:
-    exists: true
-  /scripts/umask.sh:
-    exists: true
-  /scripts/vpn.sh:
-    exists: true
-  /usr/local/bin/envsubst:
-    exists: true
+# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
+port:
+  # https://github.com/aelsabbahy/goss/issues/149
+  tcp:5600:
+    listening: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#group
-group:
-  elfie:
-    exists: true
-    gid: 568
-
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#user
-user:
-  elfie:
-    exists: true
-    uid: 568
-    gid: 568
+# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
+http:
+  http://localhost:5600:
+    status: 200
