Fix DMM Dockerfile
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/debrid-media-manager/Dockerfile
+++ b/apps/debrid-media-manager/Dockerfile
@@ -3,6 +3,6 @@ ARG VERSION
 FROM debridmediamanager/debrid-media-manager:${VERSION}
 
 # Switch to postgres
-sed -i -e 's/mysql/postgres/' prisma/schema.prisma
+RUN sed -i -e 's/mysql/postgres/' prisma/schema.prisma
 
 # Apply ElfHosted branding (soon)
