--- a/apps/debrid-media-manager/Dockerfile
+++ b/apps/debrid-media-manager/Dockerfile
@@ -3,6 +3,8 @@ ARG VERSION
 FROM debridmediamanager/debrid-media-manager:${VERSION}
 
 # Switch to postgres
-RUN sed -i -e 's/mysql/postgres/' prisma/schema.prisma
+RUN sed -i -e 's/mysql/postgres/' prisma/schema.prisma && \
+    sed -i -e 's/mysql/postgres/' node_modules/.prisma/client/schema.prisma && \
+    sed -i -e 's/mysql/postgres/' node_modules/.prisma/client/index.js
 
 # Apply ElfHosted branding (soon)
