--- a/apps/knightcrawler/addon/Dockerfile
+++ b/apps/knightcrawler/addon/Dockerfile
@@ -5,7 +5,9 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b $VERSION --depth 1 https://github.com/elfhosted/knightcrawler.git /source
+# RUN git clone -b $VERSION --depth 1 https://github.com/elfhosted/knightcrawler.git /source
+RUN git clone --depth 1 https://github.com/elfhosted/knightcrawler.git /source
+
 
 # --- Build Stage ---
 FROM node:lts-alpine AS builder
