--- a/apps/peertube/Dockerfile
+++ b/apps/peertube/Dockerfile
@@ -7,8 +7,8 @@ FROM chocobozzz/peertube:${VERSION}
 # install dependencies for vaapi
 RUN 	   apt update \
 	&& apt install -y --no-install-recommends wget apt-transport-https \
-	&& echo "deb http://deb.debian.org/debian/ $( awk -F'=' '/^VERSION_CODENAME=/{ print $NF }' /etc/os-release ) non-free" | tee /etc/apt/sources.list.d/non-free.list \
-	&& apt update \
-	&& apt install -y --no-install-recommends vainfo i965-va-driver-shaders \
-	&& apt install -y --no-install-recommends python3 \
+	&& echo "deb [signed-by=/usr/share/keyrings/debian-archive-keyring.gpg] http://deb.debian.org/debian/ $( awk -F'=' '/^VERSION_CODENAME=/{ print $NF }' /etc/os-release ) non-free" | tee /etc/apt/sources.list.d/non-free.list \
+	&& echo "deb [signed-by=/usr/share/keyrings/debian-archive-keyring.gpg] http://deb.debian.org/debian/ $( awk -F'=' '/^VERSION_CODENAME=/{ print $NF }' /etc/os-release ) non-free-firmware" | tee /etc/apt/sources.list.d/non-free-firmware.list \
+    && apt update \
+	&& apt install -y --no-install-recommends intel-media-va-driver-non-free vainfo i965-va-driver-shaders i965-va-driver mesa-va-drivers \
 	&& rm /var/lib/apt/lists/* -fR
