--- a/apps/peertube/Dockerfile
+++ b/apps/peertube/Dockerfile
@@ -10,5 +10,5 @@ RUN 	   apt update \
 	&& echo "deb [signed-by=/usr/share/keyrings/debian-archive-keyring.gpg] http://deb.debian.org/debian/ $( awk -F'=' '/^VERSION_CODENAME=/{ print $NF }' /etc/os-release ) non-free" | tee /etc/apt/sources.list.d/non-free.list \
 	&& echo "deb [signed-by=/usr/share/keyrings/debian-archive-keyring.gpg] http://deb.debian.org/debian/ $( awk -F'=' '/^VERSION_CODENAME=/{ print $NF }' /etc/os-release ) non-free-firmware" | tee /etc/apt/sources.list.d/non-free-firmware.list \
     && apt update \
-	&& apt install -y --no-install-recommends intel-media-va-driver-non-free vainfo i965-va-driver-shaders i965-va-driver mesa-va-drivers \
+	&& apt install -y --no-install-recommends intel-media-va-driver-non-free vainfo i965-va-driver-shaders \
 	&& rm /var/lib/apt/lists/* -fR
