try to add scrapers
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/debrid-media-manager/Dockerfile
+++ b/apps/debrid-media-manager/Dockerfile
@@ -5,10 +5,6 @@ FROM debridmediamanager/debrid-media-manager:${VERSION}
 # Switch to postgres
 RUN sed -i -e 's/mysql/postgres/' prisma/schema.prisma && \
     sed -i -e 's/mysql/postgres/' node_modules/.prisma/client/schema.prisma && \
-    sed -i -e 's/mysql/postgres/' node_modules/.prisma/client/index.js \
-    echo "downloading worlists" \
-    wget https://raw.githubusercontent.com/debridmediamanager/debrid-media-manager/raw/main/wordlist.txt \
-    wget https://raw.githubusercontent.com/debridmediamanager/debrid-media-manager/main/bannedwordlist.txt \
-    wget https://raw.githubusercontent.com/debridmediamanager/debrid-media-manager/main/bannedwordlist2.txt
+    sed -i -e 's/mysql/postgres/' node_modules/.prisma/client/index.js
 
 # Apply ElfHosted branding (soon)
